update notebook hw1 comments

--- a/HW1/hw1.ipynb
+++ b/HW1/hw1.ipynb
@@ -235,7 +235,9 @@
    "source": [
     "For some reason the computational times vary a lot from iteration and iteration, but some general conclusions can still be drawn, i.e. that Simpson's rule appears the slowest compared to the other two which require almost identical times. In terms of accuracy, the most accurate method is Simpson's rule, followed by trapezoidal and finally the rectangle.\n",
     "\n",
-    "The rectangle rule cannot achieve accuracies of 10^-5."
+    "The rectangle rule cannot achieve accuracies of 10^-5.\n",
+    "\n",
+    "General conclusions: The Rectangle Rule is the fastest but least accurate, requiring many steps for precision. The Trapezoid Rule is a good balance but still needs more steps than Simpson’s. For high accuracy, Simpson’s Rule is by far the most efficient, requiring orders of magnitude fewer function evaluations."
    ]
   },
   {
@@ -734,13 +736,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If I calculate $\\sigma_{v_r}$ numerically, it fixes the part of large radii (the \"jump\"), but messes up the small radii part."
+    "If I calculate $\\sigma_{v_r}$ numerically, it fixes the part of large radii (the \"jump\"), but messes up the small radii part. Thus, we conclude that teh code efficiently selects velocities for intermediate and large radii, but is not as efficient for the smaller radii regime (it falls faster than expected)."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "astro",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
